k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipesapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipesapi
  namespace: recipesapi
spec:
  selector:
    matchLabels:
      app: recipesapi
  template:
    metadata:
      labels:
        app: recipesapi
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: env
          configMap:
            name: env
        - name: serviceaccount
          configMap:
            name: serviceaccount
      containers:
        - name: recipesapi
          image: registry.bjarke.xyz/dotnetrecipesapi
          imagePullPolicy: Always
          volumeMounts:
            - name: env
              mountPath: /app/.env
              subPath: .env
            - name: serviceaccount
              mountPath: /app/serviceaccount.json
              subPath: serviceaccount.json
          resources:
            requests:
              memory: "10Mi"
              cpu: "50m"
            limits:
              memory: "1450Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: recipesapi-service
  namespace: recipesapi
  annotations:
    prometheus.io/port: "1234"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: recipesapi
  ports:
    - port: 80
      targetPort: 80
    - port: 1234
      targetPort: 1234
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipesapi-ingress
  namespace: recipesapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: recipesapi.bjarke.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: recipesapi-service
                port:
                  number: 80
  tls:
    - hosts:
        - recipesapi.bjarke.xyz
      secretName: default-cert-tls
